Fix SEO possibly not visible with zero opacity value for aside block

--- a/app/assets/style/base.scss
+++ b/app/assets/style/base.scss
@@ -108,7 +108,7 @@ main {
 // Optimizations
 
 aside.opt {
-	opacity: 0;
+	opacity: 0.02;
 	overflow: hidden;
 	height: 0;
 	width: 0;
